--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="head">
-            <h1>Need help? Raise your hand.</h1>
-            <p class="lead">crisp for people who want more</p>
+            <h1>Need help?</h1>
           </div>
         </div>
       </div>
